Fix chip.png filename case sensitivity

--- a/css/index.css
+++ b/css/index.css
@@ -519,7 +519,7 @@ span {
 .vector-2_485 {
   width: 100%;
   height: 100%;
-  background-image: url("../image/chip.png");
+  background-image: url("../image/Chip.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: absolute;
